--- a/src/app/pages/grafica1/grafica1.component.html
+++ b/src/app/pages/grafica1/grafica1.component.html
@@ -1,1 +1,45 @@
-<p>grafica1 works!</p>
+<div class="row">
+    <div class="col-6">
+
+        <app-dona title ="Patients"
+                  [labels]="labels1"
+                  [data]="data1"
+        ></app-dona>
+
+    </div>
+
+     
+
+    <div class="col-6">
+
+        <app-dona 
+            title ="Confusion matrix"
+            [labels]="labels2"
+            [data]="data2"
+        ></app-dona>
+
+    </div>
+  </div>
+     
+  <div class="row">
+    <div class="col-6">
+
+        <app-dona
+        title ="%structural atrophy"
+        [labels]="labels3"
+        [data]="data3"
+        ></app-dona>
+
+    </div>
+  
+     
+
+    <div class="col-6">
+
+        <app-dona></app-dona>
+
+    </div>
+  </div>
+     
+     
+
