--- a/src/app/pages/grafica1/grafica1.component.html
+++ b/src/app/pages/grafica1/grafica1.component.html
@@ -36,7 +36,11 @@
 
     <div class="col-6">
 
-        <app-dona></app-dona>
+        <app-dona
+        title ="Reporte mensual"
+        [labels]="labels4"
+        [data]="data4"
+        ></app-dona>
 
     </div>
   </div>
