--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -11,7 +11,8 @@
       <form
         class="form-horizontal form-material"
         id="loginform"
-        action="index.html"
+        (submit)="login()"
+        
       >
         <a href="javascript:void(0)" class="text-center db"
           ><img src="../assets/images/logo-icon.png" alt="Home" /><br /><img
@@ -61,6 +62,7 @@
             <button
               class="btn btn-info btn-lg btn-block text-uppercase btn-rounded"
               type="submit"
+              
             >
               Log In
             </button>
