--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -13,7 +13,7 @@
             aria-expanded="false"
             ><img src="./assets/images/users/profile.png" alt="user" /><span
               class="hide-menu"
-              >Steave Jobs
+              >Camilo Castrillon
             </span></a
           >
           <ul aria-expanded="false" class="collapse">
@@ -41,7 +41,10 @@
           >
           <ul aria-expanded="false" class="collapse">
             <li *ngFor="let subMenuItem of item.submenu">
-                <a [routerLink]="subMenuItem.url">{{subMenuItem.title}} </a></li>
+                <a [routerLink]="subMenuItem.url"
+                routerLinkActive="active"
+                [routerLinkActiveOptions]="{exact: true}">{{subMenuItem.title}} </a>
+              </li>
 
           </ul>
         </li>
