--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -11,8 +11,9 @@
       <form
         class="form-horizontal form-material"
         id="loginform"
-        (submit)="login()"
-        
+        autocomplete="off"
+        [formGroup]="loginForm"
+        (ngSubmit)="login()"
       >
         <a href="javascript:void(0)" class="text-center db"
           ><img src="../assets/images/logo-icon.png" alt="Home" /><br /><img
@@ -23,9 +24,9 @@
           <div class="col-xs-12">
             <input
               class="form-control"
-              type="text"
-              required=""
-              placeholder="Username"
+              type="email"
+              placeholder="email"
+              formControlName="email"
             />
           </div>
         </div>
@@ -34,8 +35,8 @@
             <input
               class="form-control"
               type="password"
-              required=""
               placeholder="Password"
+              formControlName="password"
             />
           </div>
         </div>
@@ -46,6 +47,7 @@
                 id="checkbox-signup"
                 type="checkbox"
                 class="filled-in chk-col-light-blue"
+                formControlName="rememberMe"
               />
               <label for="checkbox-signup"> Remember me </label>
             </div>
@@ -57,43 +59,31 @@
             >
           </div>
         </div>
+        <div id="google-btn">
+          <div id="my-signin2"></div>
+        </div>
         <div class="form-group text-center m-t-20">
           <div class="col-xs-12">
             <button
               class="btn btn-info btn-lg btn-block text-uppercase btn-rounded"
               type="submit"
-              
             >
               Log In
             </button>
           </div>
         </div>
         <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-12 m-t-10 text-center">
-            <div class="social">
-              <a
-                href="javascript:void(0)"
-                class="btn btn-facebook"
-                data-toggle="tooltip"
-                title="Login with Facebook"
-              >
-                <i aria-hidden="true" class="fa fa-facebook"></i>
-              </a>
-              <a
-                href="javascript:void(0)"
-                class="btn btn-googleplus"
-                data-toggle="tooltip"
-                title="Login with Google"
-              >
-                <i aria-hidden="true" class="fa fa-google-plus"></i>
-              </a>
-            </div>
+          <div
+            class="col-xs-12 col-sm-12 col-md-12 m-t-10 text-center mb-4"
+            id="google-btn"
+          >
+            <div id="my-signin2"></div>
           </div>
         </div>
         <div class="form-group m-b-0">
           <div class="col-sm-12 text-center">
             Don't have an account?
-            <a href="pages-register2.html" class="text-primary m-l-5"
+            <a routerLink="/register" class="text-primary m-l-5"
               ><b>Sign Up</b></a
             >
           </div>
@@ -121,11 +111,7 @@
         <div class="form-group text-center m-t-20">
           <div class="col-xs-12">
             <button
-              class="
-                btn btn-primary btn-lg btn-block
-                text-uppercase
-                waves-effect waves-light
-              "
+              class="btn btn-primary btn-lg btn-block text-uppercase waves-effect waves-light"
               type="submit"
             >
               Reset
