--- a/src/app/pages/grafica1/grafica1.component.html
+++ b/src/app/pages/grafica1/grafica1.component.html
@@ -1,49 +1,31 @@
 <div class="row">
-    <div class="col-6">
-
-        <app-dona title ="Patients"
-                  [labels]="labels1"
-                  [data]="data1"
-        ></app-dona>
-
-    </div>
-
-     
-
-    <div class="col-6">
-
-        <app-dona 
-            title ="Confusion matrix"
-            [labels]="labels2"
-            [data]="data2"
-        ></app-dona>
-
-    </div>
+  <div class="col-6">
+    <app-dona title="Patients" [labels]="labels1" [data]="data1"></app-dona>
   </div>
-     
-  <div class="row">
-    <div class="col-6">
 
-        <app-dona
-        title ="%structural atrophy"
-        [labels]="labels3"
-        [data]="data3"
-        ></app-dona>
-
-    </div>
-  
-     
-
-    <div class="col-6">
-
-        <app-dona
-        title ="Reporte mensual"
-        [labels]="labels4"
-        [data]="data4"
-        ></app-dona>
-
-    </div>
+  <div class="col-6">
+    <app-dona
+      title="Costos del tratamiento"
+      [labels]="labels2"
+      [data]="data2"
+    ></app-dona>
   </div>
-     
-     
+</div>
 
+<div class="row">
+  <div class="col-6">
+    <app-dona
+      title="%structural atrophy"
+      [labels]="labels3"
+      [data]="data3"
+    ></app-dona>
+  </div>
+
+  <div class="col-6">
+    <app-dona
+      title="Reporte mensual"
+      [labels]="labels4"
+      [data]="data4"
+    ></app-dona>
+  </div>
+</div>
