--- a/src/styles.css
+++ b/src/styles.css
@@ -14,3 +14,15 @@
   justify-content: center;
   text-align:center;
 }
+/* .text-center{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+} */
+.img-avatar{
+  
+  width: 200px;
+  height: 200px;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
