--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -2,16 +2,17 @@
 <!-- Main wrapper - style you can find in pages.scss -->
 <!-- ============================================================== -->
 <div id="main-wrapper">
-    <app-header></app-header>
-    <app-sidebar></app-sidebar>
-  
-    <div class="page-wrapper">
-      <div class="container-fluid">
-        <!--Breadcrumbs  -->
-        <app-breadcrumbs></app-breadcrumbs>
-        <!-- Mi sistema de rutas -->
-        <router-outlet></router-outlet>
-        <!-- <div class="row">
+  <app-header></app-header>
+  <app-sidebar></app-sidebar>
+
+  <div class="page-wrapper">
+    <div class="container-fluid">
+      <!--Breadcrumbs  -->
+      <app-breadcrumbs></app-breadcrumbs>
+      <!-- Mi sistema de rutas -->
+      <router-outlet></router-outlet>
+
+      <!-- <div class="row">
           <div class="col-12">
             <div class="card">
               <div class="card-body">
@@ -20,12 +21,13 @@
             </div>
           </div>
         </div> -->
-      </div>
-      <!-- footer -->
-      <!-- ============================================================== -->
-      <footer class="footer">© 2021 Admin Pro by wrappixel.com</footer>
-      <!-- ============================================================== -->
-      <!-- End footer -->
     </div>
+    <!-- footer -->
+    <!-- ============================================================== -->
+    <footer class="footer">© 2021 Admin Pro by wrappixel.com</footer>
+    <!-- ============================================================== -->
+    <!-- End footer -->
   </div>
-  
+</div>
+
+<app-modal-image></app-modal-image>
