--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -204,7 +204,7 @@
                       <img
                         src="./assets/images/users/1.jpg"
                         alt="user"
-                        class="img-circle"
+                        class="img"
                       />
                       <span class="profile-status online pull-right"></span>
                     </div>
