--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -8,10 +8,11 @@
       <ul id="sidebarnav">
         <li class="user-profile">
           <a
-            class="has-arrow waves-effect waves-dark"
+            class="has-arrow waves-effect waves-dark w-100"
             href="#"
             aria-expanded="false"
-            ><img [src]="user.imageUrl" alt="user" /><span class="hide-menu"
+            ><img [src]="user.imageUrl" class="img" alt="user" /><span
+              class="hide-menu"
               >{{ user.name }}
             </span></a
           >
@@ -34,7 +35,7 @@
             class="has-arrow waves-effect waves-dark"
             href="#"
             aria-expanded="false"
-            ><i class="mdi mdi-gauge"></i
+            ><i [class]="item.icon"></i
             ><span class="hide-menu">
               {{ item.title }}
               <span class="label label-rouded label-themecolor pull-right"
