--- a/src/styles.css
+++ b/src/styles.css
@@ -26,3 +26,30 @@
   border-radius: 5px;
   margin-bottom: 20px;
 }
+.avatar{
+  border-radius: 100%;
+  border: 1px solid black;
+  width: 50px;
+  height: 50px;
+}
+.img{
+height: 30px;
+width: 60px;
+  /* margin: 5px; */
+}
+.w-200{
+  width: 200px;
+}
+
+.modal-image-bg{
+background-color: rgba(0, 0, 0, 0.4);
+position: fixed;
+top: 0;
+left: 0;
+z-index: 9999;
+width: 100%;
+height: 100%;
+}
+.hidden{
+  display: none;
+}
