--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -75,11 +75,12 @@
             href="javascript:void(0)"
             ><i class="ti-search"></i
           ></a>
-          <form class="app-search">
+          <form class="app-search" (submit)="search(txtpattern.value)">
             <input
               type="text"
               class="form-control"
               placeholder="Search & enter"
+              #txtpattern
             />
             <a class="srh-btn"><i class="ti-close"></i></a>
           </form>
