Auth and guard module commented already

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
+<!-- ============================================= -->
+<!-- ===================TODO:===================== -->
+<!--======Launch component goes here!!!!!!!!=======-->
+<!-- ============================================= -->
+<!--============== <h1>Adminproworks</h1> =========-->
 <router-outlet></router-outlet>
