--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,5 +1,5 @@
 <!-- ============================================================== -->
-<!-- Main wrapper - style you can find in pages.scss -->
+<!-- Main wrapper - Register style you can find in pages.scss -->
 <!-- ============================================================== -->
 <section
   id="wrapper"
@@ -11,17 +11,26 @@
       <form
         class="form-horizontal form-material"
         id="loginform"
-        autocomplete= "off"
+        autocomplete="off"
         [formGroup]="registerForm"
         (ngSubmit)="createUser()"
       >
+        <!-- ============================================================== -->
+        <!-- Logo image -->
+        <!-- ============================================================== -->
         <a href="javascript:void(0)" class="text-center db"
           ><img src="../assets/images/logo-icon.png" alt="Home" /><br /><img
             src="../assets/images/logo-text.png"
             alt="Home"
         /></a>
+        <!-- ============================================================== -->
+        <!-- Register Hero text -->
+        <!-- ============================================================== -->
         <h3 class="box-title m-t-40 m-b-0">Register Now</h3>
         <small>Create your account and enjoy</small>
+        <!-- ============================================================== -->
+        <!-- Register form fields -->
+        <!-- ============================================================== -->
         <div class="form-group m-t-20">
           <div class="col-xs-12">
             <input
@@ -29,7 +38,6 @@
               type="text"
               placeholder="Name"
               formControlName="name"
-              
             />
           </div>
         </div>
@@ -44,6 +52,7 @@
             />
           </div>
         </div>
+
         <div class="form-group">
           <div class="col-xs-12">
             <input
@@ -55,6 +64,7 @@
             />
           </div>
         </div>
+
         <div class="form-group">
           <div class="col-xs-12">
             <input
@@ -65,51 +75,58 @@
             />
           </div>
         </div>
+
         <div class="form-group row">
           <div class="col-md-12">
             <div class="checkbox checkbox-primary p-t-0">
-              <input 
-              id="checkbox-signup"
-              type="checkbox" 
-              formControlName="terms" />
-
+              <input
+                id="checkbox-signup"
+                type="checkbox"
+                formControlName="terms"
+              />
               <label for="checkbox-signup">
                 I agree to all <a href="#">Terms</a></label
               >
             </div>
           </div>
         </div>
-
         <div class="row">
-            <div class="col text-danger">
-                <p *ngIf="notValidField('name')">*name is required</p>
-                <p *ngIf="notValidField('email')">*email is required and must be valid</p>
-                <p *ngIf="notValidPassword()">*Passwords must have the same values</p>
-                <!-- <p *ngIf="!registerForm.get('terms').value">Please accept terms</p> -->
-                <p *ngIf="acceptTerms()">*Please accept terms</p>
-            </div>
+          <div class="col text-danger">
+            <p *ngIf="notValidField('name')">*name is required</p>
+            <p *ngIf="notValidField('email')">
+              *email is required and must be valid
+            </p>
+            <p *ngIf="notValidPassword()">
+              *Passwords must have the same values
+            </p>
+            <p *ngIf="acceptTerms()">*Please accept terms</p>
+          </div>
         </div>
+        <!-- ============================================================== -->
+        <!-- Bottom part of the form -->
+        <!-- ============================================================== -->
         <div class="form-group text-center m-t-20">
+          <!-- ============================================================== -->
+          <!-- Submit button -->
+          <!-- ============================================================== -->
           <div class="col-xs-12">
             <button
-              class="
-                btn btn-info btn-lg btn-block
-                text-uppercase
-                waves-effect waves-light
-              "
+              class="btn btn-info btn-lg btn-block text-uppercase waves-effect waves-light"
               type="submit"
             >
               Sign Up
             </button>
           </div>
+          <!-- ============================================================== -->
+          <!-- Login form Link -->
+          <!-- !TODO: Make it scrolleable -->
+          <!-- ============================================================== -->
         </div>
         <div class="form-group m-b-0">
           <div class="col-sm-12 text-center">
             <p>
               Already have an account?
-              <a routerLink="/login" class="text-info m-l-5"
-                ><b>Sign In</b></a
-              >
+              <a routerLink="/login" class="text-info m-l-5"><b>Sign In</b></a>
             </p>
           </div>
         </div>
