Udating to angular cli 16

--- a/src/app/components/dona/dona.component.html
+++ b/src/app/components/dona/dona.component.html
@@ -1,6 +1,6 @@
-<div class="card">
+<!-- <div class="card">
     <div class="card-body">
-<!-- 'Sin Titulo' -->
+
         <h3>{{title}}</h3>
 
         <div style="display: block">
@@ -13,4 +13,4 @@
           </div>
           
     </div>
-  </div>
+  </div> -->
