--- a/src/app/pages/grafica1/grafica1.component.html
+++ b/src/app/pages/grafica1/grafica1.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<!-- <div class="row">
   <div class="col-6">
     <app-dona title="Patients" [labels]="labels1" [data]="data1"></app-dona>
   </div>
@@ -28,4 +28,4 @@
       [data]="data4"
     ></app-dona>
   </div>
-</div>
+</div> -->
