--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,1 +1,14 @@
-<h1>Welcome to your profile</h1>
+<h1>Novedades</h1>
+
+<p>
+  Seccion para mantener actualizado el usuario con temas de su interes (EN
+  funcion de su rol)
+</p>
+
+<ul>
+  <li>LEGISLACION</li>
+  <li>Historicos de pacientes</li>
+  <li>Novedades de resultados</li>
+  <li>Encuentros proximos</li>
+  <li>...</li>
+</ul>
